# spbgu-lab

./: CMakeLists.txt
task3-ieee754/: CMakeLists.txt
task3-ieee754/include/: ieee754.h
task3-ieee754/src/: ieee754.c
task5-bmp/: CMakeLists.txt
task5-bmp/comparer/: comparer.c
task5-bmp/converter/: converter.c
task5-bmp/include/: bmp.h
task5-bmp/src/: bmp.c
task6-calculator/: CMakeLists.txt
task6-calculator/calculator/: calculator.c
task6-calculator/calculator/include/: rpn.h
task6-calculator/include/: arraylist.h  bignum.h
task6-calculator/src/: arraylist.c  bignum.c  run.c
